@@ -1226,3 +1226,5 @@ msg_comptype_name: 'Alphabetical Order'
 msg_comptype_open: 'Open Status'
 msg_status_npc: '&c%s is not an real player, and is limited to Towny only.'
 npc_created: '&2Created: &a%s'
+msg_no_funds_claim_plot: '&cYou cannot afford to claim the plot costing %s.'
+msg_no_funds_claim_plot_group: '&cYou cannot afford to claim the %s plots costing %s.'
